fix: Update style for improved document readability and easier document writing

--- a/src/styles/templates/BlogPostTemplate.module.scss
+++ b/src/styles/templates/BlogPostTemplate.module.scss
@@ -29,8 +29,11 @@
   margin: 30px auto 0;
 
   * {
-    margin-top: 10px;
     line-height: 180%;
+  }
+
+  * + * {
+    margin-top: 1.2em;
   }
 
   ol,
@@ -38,8 +41,46 @@
     padding-left: 2rem;
   }
 
+  li + li {
+    margin-top: 0.5em;
+  }
+
+  li + ul {
+    margin-top: 0.5em;
+  }
+
   p {
     word-break: break-all;
+  }
+
+  span:has(> span > a > span + img) {
+    // gatsby-remark-image가 자동으로 생성하여 감싸는 span 태그를 선택.
+    display: block;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+
+    span {
+      max-width: 100vw !important; // gatsby-remark-image가 자동 생성하는 이미지 래퍼 요소(span)의 인라인 스타일을 무시하기 위함.
+    }
+
+    + i {
+      font-size: rem(12px);
+      display: block;
+      text-align: center;
+    }
+
+    @include tablet-sm {
+      width: 100%;
+    }
+  }
+
+  iframe[src*="codepen"] {
+    height: 400px !important; //  gatsby-remark-embedder가 자동 생성하는 iframe의 인라인 스타일을 무시하기 위함.
+  }
+
+  pre[class*="language-"] {
+    margin-top: 1.2em;
   }
 }
 
